--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/spinner.css">
     <title>Document</title>
 </head>
 <body>
-    <ul id="ul"></ul>
+    <div class="shading">
+        <span class="spinner"></span>
+        <ul id="root"></ul>
+    </div>
     <script src="./js/app.js"></script>
 </body>
 </html>
